# EdgeLink

./: .dockerignore  .gitignore  CLAUDE.local.md  CLAUDE.md  CMakeLists.txt  CODE_REVIEW_ISSUES.md  Dockerfile  Dockerfile.static  FIXES_APPLIED.md  QUICKSTART.md  README.md  client_exit_issue_analysis.md  docker-compose.yml  edgelink.db-shm  edgelink.db-wal  tmpclaude-9257-cwd  vcpkg.json
.claude/: settings.local.json
.github/workflows/: autobuild.yml  build.yml
cmake/: proto_gen.cmake
config/: client.example.json  client.example.toml  controller.example.json  controller.example.toml  controller.json  server.example.json  server.json
docker/: Dockerfile.client  Dockerfile.controller  Dockerfile.server
docs/: DEPLOYMENT.md  E2E_TEST_STATUS.md  LINUX_BUILD.md  PHASE5_STATUS.md  PHASE6_STATUS.md  PHASE7_STATUS.md  PHASE8_STATUS.md  REFACTOR_PLAN.md  RELAY_MESH_STATUS.md  WEBSOCKET_STATUS.md  WINDOWS_BUILD.md  architecture.md  edgelink-design.md  graceful_shutdown.md  performance_monitoring.md  security_audit_report.md  thread_model.md  wss-mesh-design.md
proto/: edgelink.proto
scripts/: build-linux.sh  build-windows.ps1  install.sh  utf8cl.cmd
src/: pch.hpp
src/client/: channel.cpp  channel.hpp  client.cpp  client.hpp  client.manifest  client_actor.cpp  client_actor.hpp  client_config.hpp  config_applier.cpp  config_applier.hpp  config_watcher.cpp  config_watcher.hpp  connection_state.cpp  connection_state.hpp  control_channel.cpp  control_channel.hpp  control_channel_actor.cpp  control_channel_actor.hpp  control_channel_coro.cpp  control_channel_coro.hpp  control_channel_types.hpp  crypto_engine.cpp  crypto_engine.hpp  data_plane_actor.cpp  data_plane_actor.hpp  endpoint_manager.cpp  endpoint_manager.hpp  grpc_relay_manager.cpp  grpc_relay_manager.hpp  ipc_server.cpp  ipc_server.hpp  main.cpp  multi_relay_manager.cpp  multi_relay_manager.hpp  p2p_manager.cpp  p2p_manager.hpp  p2p_manager_actor.cpp  p2p_manager_actor.hpp  peer_latency_measurer.cpp  peer_latency_measurer.hpp  (+29 more)
src/client/cli/: cli_common.hpp  cmd_config.cpp  cmd_daemon.cpp  cmd_down.cpp  cmd_peers.cpp  cmd_ping.cpp  cmd_routes.cpp  cmd_set.cpp  cmd_status.cpp  cmd_up.cpp  cmd_version.cpp
src/client/wintun/: wintun.h  wintun_internal.h  wintun_static.c  wintun_static.h
src/common/: actor.hpp  actor_messages.hpp  actor_system.hpp  async_service.hpp  auth_proto_helpers.hpp  binary_codec.cpp  binary_codec.hpp  cobalt_utils.hpp  config.cpp  config.hpp  config_metadata.cpp  config_metadata.hpp  config_writer.cpp  config_writer.hpp  connection_types.cpp  connection_types.hpp  constants.hpp  cross_thread_channel.hpp  crypto.cpp  crypto.hpp  data_forwarder.cpp  data_forwarder.hpp  debug_mutex.hpp  event_bus.hpp  events.hpp  frame.cpp  frame.hpp  io_context_pool.cpp  io_context_pool.hpp  jwt.cpp  jwt.hpp  log.cpp  log.hpp  logger.cpp  logger.hpp  math_utils.hpp  memory_pool.hpp  message.cpp  message.hpp  mpsc_queue.hpp  (+27 more)
src/common/crypto/: chacha20.cpp  chacha20.hpp  ed25519.cpp  ed25519.hpp  hkdf.cpp  hkdf.hpp  x25519.cpp  x25519.hpp
src/controller/: builtin_relay.cpp  builtin_relay.hpp  builtin_stun.cpp  builtin_stun.hpp  client_session_state.cpp  client_session_state.hpp  commands.cpp  commands.hpp  database.cpp  database.hpp  jwt_util.cpp  jwt_util.hpp  main.cpp  path_decision.cpp  path_decision.hpp  server.cpp  server.hpp  session.cpp  session.hpp  session_impl.hpp  session_manager.cpp  session_manager.hpp  session_manager_actor.cpp  session_manager_actor.hpp  stun_server.cpp  stun_server.hpp
src/controller/api/: control_handler.cpp  control_handler.hpp  grpc_server.cpp  grpc_server.hpp  http_server.cpp  http_server.hpp  services.cpp  services.hpp  ws_server.cpp  ws_server.hpp  ws_server_coro.cpp  ws_server_coro.hpp
src/controller/db/: database.cpp  database.hpp  migrations.cpp  migrations.hpp
src/controller/services/: path_service.cpp  path_service.hpp
src/server/: controller_client.cpp  controller_client.hpp  grpc_relay_server.cpp  grpc_relay_server.hpp  main.cpp  mesh_client.cpp  mesh_client.hpp  mesh_manager.cpp  mesh_manager.hpp  mesh_session.cpp  mesh_session.hpp  node_location_cache.cpp  node_location_cache.hpp  relay_server.cpp  relay_server.hpp  relay_session.cpp  relay_session.hpp  stun_server.cpp  stun_server.hpp  ws_relay_server.cpp  ws_relay_server.hpp  ws_relay_server_coro.cpp  ws_relay_server_coro.hpp  ws_relay_session_coro.cpp  ws_relay_session_coro.hpp
systemd/: edgelink-client.service  edgelink-controller.service  edgelink-server.service
tests/: cobalt_smoke_test.cpp  e2e_test.sh  simple_e2e.sh  test_crypto.cpp  test_protocol.cpp
